--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
   border-radius: 6px;
   overflow: hidden;
   width: calc((100% - 48px) / 3);
-  box-shadow: 0 2px 8px rgb(0 0 0 / 0.15);
+  box-shadow: 4px 6px rgb(0 0 0 / 0.15);
   transition: transform 250ms ease;
   cursor: pointer;
 }
